Beta de Index, Cambio de estructura BD, Estructura Atletas
Se crea el módulo footer.
Se diseña el cuerpo de la página index y el footer siguiendo el boceto establecido con cambios en el texto.
Se instalan fuentes.
Se mueve a directorio Legacy archivos viejos o no útiles del sitio
Se crea el archivo Atleta.php con sus módulos addatleta.html, editatleta.html, delatleta.html a los cuales se les implementó un sistema que los invoca dinámicamente. Dicho sistema de invocación está finalizado funcionalmente, no propiamente testeado. Falta implementar sistema que conecte con la base de datos para darle funcionalidad a dichos módulos, antes de eso habría que trabajar en el sitio de Disciplinas. Sobre la BD se cambia la estructura a solo dos tablas, una de Atletas y una de Disciplinas, se almacena la fk de Disciplinas en Atletas. Sistema que permita añadir datos desde el sitio web todavía faltante.
Se crea el archivo de scripts, que solamente tiene la función de showAtleta para el sistema de invocación.
La estructura de EditAtleta y DelAtleta está faltante, hay un placeholder con la estructura de Add. Se modificará cuando esté realizado las Disciplinas.
:)

--- a/header.html
+++ b/header.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Atletic WEB</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+
 <header>
 	<div class="header">
 		<div class="superior">
@@ -17,8 +11,8 @@
 		</div>
 		<div class="nav-fondo">
 			<nav>
-				<a class="btn-nav" id="nav1" href="index.html">Inicio</a>
-				<a class="btn-nav" id="nav2" href="#">Atletas</a>
+				<a class="btn-nav" id="nav1" href="index.php">Inicio</a>
+				<a class="btn-nav" id="nav2" href="atletas.php">Atletas</a>
 				<a class="btn-nav" id="nav3" href="#">Disciplinas</a>
 				<a class="btn-nav" id="nav4" href="#">Consultas</a>
 				
@@ -27,5 +21,3 @@
 		</div>
 	</div>
 </header>
-</body>
-</html>
