--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
 			<nav>
 				<a class="btn-nav" id="nav1" href="index.php">Inicio</a>
 				<a class="btn-nav" id="nav2" href="atletas.php">Atletas</a>
-				<a class="btn-nav" id="nav3" href="#">Disciplinas</a>
+				<a class="btn-nav" id="nav3" href="disciplinas.php">Disciplinas</a>
 				<a class="btn-nav" id="nav4" href="#">Consultas</a>
 				
 			
