Arreglo de EditAtleta y Preparación de Consultas
Se arregla el EditAtleta que no estaba editando sino agregando atletas. En el select para elegir alteta se incluye el nombre además del ID. Se crea Consultas.php con sus dos módulos, ahora practicamente vacíos, consultaDisciplinas.php y consultaAtletas.php que tendran en un futuro una tabla con el listado sacado de la base de datos donde se podrá ordenar, filtrar, etc. Se implementó en Consultas.php el sistema que permite invocar un módulo o el otro dinámicamente.

--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
 				<a class="btn-nav" id="nav1" href="index.php">Inicio</a>
 				<a class="btn-nav" id="nav2" href="atletas.php">Atletas</a>
 				<a class="btn-nav" id="nav3" href="disciplinas.php">Disciplinas</a>
-				<a class="btn-nav" id="nav4" href="#">Consultas</a>
+				<a class="btn-nav" id="nav4" href="consultas.php">Consultas</a>
 				
 			
 			</nav>
